# StackLoader

./: .gitignore  pyproject.toml  readme.md  requirements.txt
app/: create_csv.py  main.py  parse_xml.py
app/config/: settings.py
data_types/: QueryResults.csv
tests/: test_logic.py
