[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "postgres-loader"
version = "0.1.0"
description = "Convert Stack Exchange XML dumps to CSV for local database loading"
requires-python = ">=3.10"
dependencies = [
    "lxml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
